Adjusts footer position to avoid extra spacing

--- a/src/app/footer-navbar/footer-navbar.component.css
+++ b/src/app/footer-navbar/footer-navbar.component.css
@@ -7,7 +7,7 @@ footer {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  margin-top: 54vh;
+  margin-bottom: 0px;
 }
 
 div a {
